care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/FSP_Monthly_Settlement__c.object-meta.xml
<CustomObject>
    <label>FSP Monthly Settlement</label>
    <nameField>
        <displayFormat>MS-{00000}</displayFormat>
        <label>FSP Monthly Settlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSP Monthly Settlements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>