care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Below_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Below_Threshold__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Below Threshold</label>
    <type>Checkbox</type>
</CustomField>