care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculation_Date__c</fullName>
    <label>Calculation Date</label>
    <type>Date</type>
</CustomField>