care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FSP__c.field-meta.xml
<CustomField>
    <fullName>FSP__c</fullName>
    <label>FSP</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FSP Monthly Settlements</relationshipLabel>
    <relationshipName>FSP_Monthly_Settlements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>