care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FSP_LC_To_USD__c.field-meta.xml
<CustomField>
    <fullName>FSP_LC_To_USD__c</fullName>
    <description>FSP should be able to provide the FX rate they received from their bank (Local currency &gt; USD)</description>
    <label>FSP (LC To USD)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>