care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FSP_Repayment_Amount_USD__c.field-meta.xml
<CustomField>
    <fullName>FSP_Repayment_Amount_USD__c</fullName>
    <label>FSP Repayment Amount (USD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>