care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FSP_Repayment_Amount_VND__c.field-meta.xml
<CustomField>
    <fullName>FSP_Repayment_Amount_VND__c</fullName>
    <label>FSP Repayment Amount (VND)</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>