care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FSP_Staff__c.field-meta.xml
<CustomField>
    <fullName>FSP_Staff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FSP Staff</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>FSP Monthly Settlements</relationshipLabel>
    <relationshipName>FSP_Monthly_Settlements</relationshipName>
    <type>Lookup</type>
</CustomField>