care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Funded_Loan_Amount_AUD__c.field-meta.xml
<CustomField>
    <fullName>Funded_Loan_Amount_AUD__c</fullName>
    <label>Funded Loan Amount (AUD)</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>