care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FX_LC_To_USD__c.field-meta.xml
<CustomField>
    <fullName>FX_LC_To_USD__c</fullName>
    <description>system should convert the sum from local currency to USD.
the FSP should be able to see conversion rate that was used by the system (Local currency &gt; USD).</description>
    <label>FX (LC To USD)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>