care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/FX_VND_To_USD__c.field-meta.xml
<CustomField>
    <fullName>FX_VND_To_USD__c</fullName>
    <label>FX (VND To USD)</label>
    <precision>12</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>