care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Offset_Balance_for_FSP_USD__c.field-meta.xml
<CustomField>
    <fullName>Offset_Balance_for_FSP_USD__c</fullName>
    <label>Offset Balance for FSP (USD)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>