care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Offset_Calculation_Date__c.field-meta.xml
<CustomField>
    <fullName>Offset_Calculation_Date__c</fullName>
    <label>Offset Calculation Date</label>
    <type>Date</type>
</CustomField>