care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Offset_Clearance__c.field-meta.xml
<CustomField>
    <fullName>Offset_Clearance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Offset Clearance</label>
    <type>Checkbox</type>
</CustomField>