care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Offset_Month_Year__c.field-meta.xml
<CustomField>
    <fullName>Offset_Month_Year__c</fullName>
    <label>Offset Month Year</label>
    <length>30</length>
    <type>Text</type>
</CustomField>