care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/fields/Transfer_Type__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Type__c</fullName>
    <formula>IF(Offset_Balance_for_CA_USD__c &gt; 0, &quot;FSP &gt; CA&quot;, IF(Offset_Balance_for_FSP_USD__c &gt; 0, &quot;CA &gt; FSP&quot;, &quot;&quot;))</formula>
    <label>Transfer Type</label>
    <type>Text</type>
</CustomField>