care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSP__c</columns>
    <columns>FSP_Staff__c</columns>
    <columns>Offset_Month_Year__c</columns>
    <columns>FSP_LC_To_USD__c</columns>
    <columns>FX_LC_To_USD__c</columns>
    <columns>FX_AUD_To_USD__c</columns>
    <columns>Offset_Balance_for_CA_USD__c</columns>
    <columns>Offset_Balance_for_FSP_USD__c</columns>
    <columns>Transfer_Type__c</columns>
    <columns>Settlement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>