care-australia-uat/force-app/main/default/objects/FSP_Monthly_Settlement__c/listViews/FSP_Portal_view.listView-meta.xml
<ListView>
    <fullName>FSP_Portal_view</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Offset Caclulation (FSP)</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
        <group>FSP_Users</group>
    </sharedTo>
</ListView>